header, main draft

--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<h1>pimtao2</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <title>Landing Page DeD</title>
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+  <header class="backplate">
+    <div class="container">
+      <div>
+        <h1>F&T</h1>
+      </div>
+      <div>
+        <nav>
+          <ul>
+            <li>Meus projetos</li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <main class="backplate">
+    <div class="container ">
+      <div>
+
+      </div>
+      <div>
+        <img src="" alt="">
+        <figcaption></figcaption>
+      </div>
+    </div>
+  </main>
+
+</body>
+
+</html>
