--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 </head>
 
 <body>
-  <header class="backplate">
+  <header class="backplate header">
     <div class="container">
       <div>
         <h1>F&T</h1>
       </div>
       <div>
-        <nav>
+        <nav aria-label="primaria">
           <ul>
             <li>Meus projetos</li>
           </ul>
@@ -26,12 +26,23 @@
   </header>
   <main class="backplate">
     <div class="container ">
-      <div>
-
+      <div class="info">
+        <h1>Olá! Sou Fernando Tarso.</h1>
+        <p>Um deselvolvedor front-end em formação, rumo ao full stack.</p>
+        <p>Estou sempre buscando novos projetos para aprender e desenvolver minhas habilidades em web-development, além de feedback da comunidade de programação.</p>
+        <p>Interessado em jogos, animação e música. Um pra cada estação, e todos na ultima!</p>
+        <nav aria-label="secundaria">
+          <ul class="socials">
+            <li><a href="https://github.com/FernandoTarso" target="_blank"><img src="/icons/gh_w.svg" alt="github" height="36" width="36"></a></li>
+            <li><a href="https://pt-br.facebook.com/" target="_blank"><img src="/icons/fb_w.svg" alt="facebook" height="36" width="36"></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank"><img src="/icons/ig_w.svg" alt="instagram" height="36" width="36"></a></li>
+            <li><a href="https://www.youtube.com/" target="_blank"><img src="/icons/yt_w.svg" alt="youtube" height="36" width="36"></a></li>
+          </ul>
+        </nav>
       </div>
       <div>
-        <img src="" alt="">
-        <figcaption></figcaption>
+        <img class="perfil" src="/img/foto-perfil.png" alt="" height="460" width="460">
+        <figcaption class="caption">Foto meramente ilustrativa</figcaption>
       </div>
     </div>
   </main>
