--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 </head>
 
 <body>
-  <header class="backplate header">
-    <div class="container">
+  <header class="backplate">
+    <div class="container c-flex">
       <div>
         <h1>F&T</h1>
       </div>
       <div>
         <nav aria-label="primaria">
           <ul>
-            <li>Meus projetos</li>
+            <li><a href="#projetos">Meus projetos</a></li>
           </ul>
         </nav>
       </div>
     </div>
   </header>
   <main class="backplate">
-    <div class="container ">
+    <div class="container c-flex">
       <div class="info">
         <h1>Olá! Sou Fernando Tarso.</h1>
         <p>Um deselvolvedor front-end em formação, rumo ao full stack.</p>
@@ -46,6 +46,31 @@
       </div>
     </div>
   </main>
+
+  <section id="projetos" class="backplate">
+    <h2 class="projetos-titulo">Meu projetos</h2>
+    <div class="container p-flex">
+      <div>
+        <img src="/img/projeto-gta.png" alt="" width="501" height="960">
+      </div>
+      <div>
+        <img src="/img/projeto-listagem-pokemon.png" alt="" width="504" height="953">
+      </div>
+      <div>
+        <img src="/img/projeto-one-piece.png" alt="" width="515" height="957">
+      </div>
+      <div>
+        <img src="/img/projeto-x-men.png" alt="" width="500" height="956">
+      </div>
+    </div>
+  </section>
+
+  <footer class="backplate">
+    <div class="container c-flex">
+      <h2 class="agradecimentos">Agradecimentos e considerações</h2>
+    </div>
+
+  </footer>
 
 </body>
 
