--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
         <p>Interessado em jogos, animação e música. Um pra cada estação, e todos na ultima!</p>
         <nav aria-label="secundaria">
           <ul class="socials">
-            <li><a href="https://github.com/FernandoTarso" target="_blank"><img src="/icons/gh_w.svg" alt="github" height="36" width="36"></a></li>
-            <li><a href="https://pt-br.facebook.com/" target="_blank"><img src="/icons/fb_w.svg" alt="facebook" height="36" width="36"></a></li>
-            <li><a href="https://www.instagram.com/" target="_blank"><img src="/icons/ig_w.svg" alt="instagram" height="36" width="36"></a></li>
-            <li><a href="https://www.youtube.com/" target="_blank"><img src="/icons/yt_w.svg" alt="youtube" height="36" width="36"></a></li>
+            <li><a href="https://github.com/FernandoTarso" target="_blank"><img src="/icons/gh_w.svg" alt="github" width="36" height="36"></a></li>
+            <li><a href="https://pt-br.facebook.com/" target="_blank"><img src="/icons/fb_w.svg" alt="facebook" width="36" height="36"></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank"><img src="/icons/ig_w.svg" alt="instagram" width="36" height="36"></a></li>
+            <li><a href="https://www.youtube.com/" target="_blank"><img src="/icons/yt_w.svg" alt="youtube" width="36" height="36"></a></li>
           </ul>
         </nav>
       </div>
       <div>
-        <img class="perfil" src="/img/foto-perfil.png" alt="" height="460" width="460">
+        <img class="perfil" src="/img/foto-perfil.png" alt="foto perfil" width="460" height="460">
         <figcaption class="caption">Foto meramente ilustrativa</figcaption>
       </div>
     </div>
@@ -51,23 +51,29 @@
     <h2 class="projetos-titulo">Meu projetos</h2>
     <div class="container p-flex">
       <div>
-        <img src="/img/projeto-gta.png" alt="" width="501" height="960">
+        <img src="/img/projeto-gta.png" alt="projeto gta" width="501" height="960">
       </div>
       <div>
-        <img src="/img/projeto-listagem-pokemon.png" alt="" width="504" height="953">
+        <img src="/img/projeto-listagem-pokemon.png" alt="projeto listagem pokemon" width="504" height="953">
       </div>
       <div>
-        <img src="/img/projeto-one-piece.png" alt="" width="515" height="957">
+        <img src="/img/projeto-one-piece.png" alt="projeto one piece" width="515" height="957">
       </div>
       <div>
-        <img src="/img/projeto-x-men.png" alt="" width="500" height="956">
+        <img src="/img/projeto-x-men.png" alt="projeto x-men" width="500" height="956">
       </div>
     </div>
   </section>
 
   <footer class="backplate">
     <div class="container c-flex">
-      <h2 class="agradecimentos">Agradecimentos e considerações</h2>
+      <details class="agradecimentos">
+        <summary>
+          <h2>Agradecimentos & considerações.</h2>
+        </summary>
+        <p>Agradeço de coração aos meus amigos <strong>Pulga</strong> e <strong>Raffa</strong>, que estão sempre presentes e me incentivando a melhorar. E me carregando nos games.</p>
+      </details>
+
     </div>
 
   </footer>
