projetos overflow attempt

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div>
         <nav aria-label="primaria">
-          <ul>
+          <ul class="navegacao-primaria">
             <li><a href="#projetos">Meus projetos</a></li>
           </ul>
         </nav>
@@ -46,38 +46,39 @@
       </div>
     </div>
   </main>
-
   <section id="projetos" class="backplate">
     <h2 class="projetos-titulo">Meu projetos</h2>
-    <div class="container p-flex">
+    <div id="panel" class="container">
       <div>
-        <img src="/img/projeto-gta.png" alt="projeto gta" width="501" height="960">
+        <a href=""><img src="/img/projeto-gta.png" alt="projeto gta" width="501" height="960"></a>
       </div>
       <div>
-        <img src="/img/projeto-listagem-pokemon.png" alt="projeto listagem pokemon" width="504" height="953">
+        <a href=""><img src="/img/projeto-listagem-pokemon.png" alt="projeto listagem pokemon" width="504" height="953"></a>
       </div>
       <div>
-        <img src="/img/projeto-one-piece.png" alt="projeto one piece" width="515" height="957">
+        <a href=""><img src="/img/projeto-one-piece.png" alt="projeto one piece" width="515" height="957"></a>
       </div>
       <div>
-        <img src="/img/projeto-x-men.png" alt="projeto x-men" width="500" height="956">
+        <a href=""><img src="/img/projeto-x-men.png" alt="projeto x-men" width="500" height="956"></a>
+      </div>
+      <div>
+        <a href=""><img src="/img/port_lobo_tb.png" alt="projeto x-men" width="350" height="680"></a>
+      </div>
+      <div>
+        <a href=""><img src="/img/bikcraft_tb.png" alt="projeto x-men" width="276" height="680"></a>
       </div>
     </div>
   </section>
-
   <footer class="backplate">
     <div class="container c-flex">
       <details class="agradecimentos">
         <summary>
           <h2>Agradecimentos & considerações.</h2>
         </summary>
-        <p>Agradeço de coração aos meus amigos <strong>Pulga</strong> e <strong>Raffa</strong>, que estão sempre presentes e me incentivando a melhorar. E me carregando nos games.</p>
+        <p>Agradeço de coração aos meus amigos <strong>Pulga</strong> e <strong>Raffa</strong>, que estão sempre presentes e me incentivando a melhorar. E me carregar nos games.</p>
       </details>
-
     </div>
-
   </footer>
-
 </body>
 
 </html>
