--- a/index.html
+++ b/index.html
@@ -48,26 +48,26 @@
   </main>
   <section id="projetos" class="backplate">
     <h2 class="projetos-titulo">Meu projetos</h2>
-    <div id="panel" class="container">
-      <div>
+    <ul id="panel" class="container p-flex">
+      <li>
         <a href=""><img src="/img/projeto-gta.png" alt="projeto gta" width="501" height="960"></a>
-      </div>
-      <div>
+      </li>
+      <li>
         <a href=""><img src="/img/projeto-listagem-pokemon.png" alt="projeto listagem pokemon" width="504" height="953"></a>
-      </div>
-      <div>
+      </li>
+      <li>
         <a href=""><img src="/img/projeto-one-piece.png" alt="projeto one piece" width="515" height="957"></a>
-      </div>
-      <div>
+      </li>
+      <li>
         <a href=""><img src="/img/projeto-x-men.png" alt="projeto x-men" width="500" height="956"></a>
-      </div>
-      <div>
-        <a href=""><img src="/img/port_lobo_tb.png" alt="projeto x-men" width="350" height="680"></a>
-      </div>
-      <div>
-        <a href=""><img src="/img/bikcraft_tb.png" alt="projeto x-men" width="276" height="680"></a>
-      </div>
-    </div>
+      </li>
+      <li>
+        <a href="https://fernandotarso.github.io/portfolio_lobo/" target="_blank"><img src="/img/port_lobo_tb.png" alt="projeto x-men" width="350" height="680"></a>
+      </li>
+      <li>
+        <a href="https://fernandotarso.github.io/bikcraft/" target="_blank"><img src="/img/bikcraft_tb.png" alt="projeto x-men" width="276" height="680"></a>
+      </li>
+    </ul>
   </section>
   <footer class="backplate">
     <div class="container c-flex">
