projetos hover up

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <summary>
           <h2>Agradecimentos & considerações.</h2>
         </summary>
-        <p>Agradeço de coração aos meus amigos <strong>Pulga</strong> e <strong>Raffa</strong>, que estão sempre presentes e me incentivando a melhorar. E me carregar nos games.</p>
+        <p>Agradeço de coração aos meus amigos <strong>Pulga</strong> e <strong>Raffa</strong>, que estão sempre presentes e me incentivando a melhorar. E me carregando nos games.</p>
       </details>
     </div>
   </footer>
