--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p>Interessado em jogos, animação e música. Um pra cada estação, e todos na ultima!</p>
         <nav aria-label="secundaria">
           <ul class="socials">
-            <li><a href="https://github.com/FernandoTarso" target="_blank"><img src="./icons/gh_w.svg" alt="github" width="36" height="36"></a></li>
+            <li><a href="https://github.com/FernandoTarso" target="_blank"><img src="icons/gh_w.svg" alt="github" width="36" height="36"></a></li>
             <li><a href="https://pt-br.facebook.com/" target="_blank"><img src="/icons/fb_w.svg" alt="facebook" width="36" height="36"></a></li>
             <li><a href="https://www.instagram.com/" target="_blank"><img src="/icons/ig_w.svg" alt="instagram" width="36" height="36"></a></li>
             <li><a href="https://www.youtube.com/" target="_blank"><img src="/icons/yt_w.svg" alt="youtube" width="36" height="36"></a></li>
