img load fix atp 1

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
         <p>Interessado em jogos, animação e música. Um pra cada estação, e todos na ultima!</p>
         <nav aria-label="secundaria">
           <ul class="socials">
-            <li><a href="https://github.com/FernandoTarso" target="_blank"><img src="icons/gh_w.svg" alt="github" width="36" height="36"></a></li>
-            <li><a href="https://pt-br.facebook.com/" target="_blank"><img src="/icons/fb_w.svg" alt="facebook" width="36" height="36"></a></li>
-            <li><a href="https://www.instagram.com/" target="_blank"><img src="/icons/ig_w.svg" alt="instagram" width="36" height="36"></a></li>
-            <li><a href="https://www.youtube.com/" target="_blank"><img src="/icons/yt_w.svg" alt="youtube" width="36" height="36"></a></li>
+            <li><a href="https://github.com/FernandoTarso" target="_blank"><img src="./icons/gh_w.svg" alt="github" width="36" height="36"></a></li>
+            <li><a href="https://pt-br.facebook.com/" target="_blank"><img src="./icons/fb_w.svg" alt="facebook" width="36" height="36"></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank"><img src="./icons/ig_w.svg" alt="instagram" width="36" height="36"></a></li>
+            <li><a href="https://www.youtube.com/" target="_blank"><img src="./icons/yt_w.svg" alt="youtube" width="36" height="36"></a></li>
           </ul>
         </nav>
       </div>
       <div>
-        <img class="perfil" src="/img/foto-perfil.png" alt="foto perfil" width="460" height="460">
+        <img class="perfil" src="./img/foto-perfil.png" alt="foto perfil" width="460" height="460">
         <figcaption class="caption">Foto meramente ilustrativa</figcaption>
       </div>
     </div>
@@ -50,22 +50,22 @@
     <h2 class="projetos-titulo">Meu projetos</h2>
     <ul id="panel" class="container p-flex">
       <li>
-        <a href=""><img src="/img/projeto-gta.png" alt="projeto gta" width="501" height="960"></a>
+        <a href=""><img src="./img/projeto-gta.png" alt="projeto gta" width="501" height="960"></a>
       </li>
       <li>
-        <a href=""><img src="/img/projeto-listagem-pokemon.png" alt="projeto listagem pokemon" width="504" height="953"></a>
+        <a href=""><img src="./img/projeto-listagem-pokemon.png" alt="projeto listagem pokemon" width="504" height="953"></a>
       </li>
       <li>
         <a href=""><img src="/img/projeto-one-piece.png" alt="projeto one piece" width="515" height="957"></a>
       </li>
       <li>
-        <a href=""><img src="/img/projeto-x-men.png" alt="projeto x-men" width="500" height="956"></a>
+        <a href=""><img src="./img/projeto-x-men.png" alt="projeto x-men" width="500" height="956"></a>
       </li>
       <li>
-        <a href="https://fernandotarso.github.io/portfolio_lobo/" target="_blank"><img src="/img/port_lobo_tb.png" alt="projeto x-men" width="350" height="680"></a>
+        <a href="https://fernandotarso.github.io/portfolio_lobo/" target="_blank"><img src="./img/port_lobo_tb.png" alt="projeto x-men" width="350" height="680"></a>
       </li>
       <li>
-        <a href="https://fernandotarso.github.io/bikcraft/" target="_blank"><img src="/img/bikcraft_tb.png" alt="projeto x-men" width="276" height="680"></a>
+        <a href="https://fernandotarso.github.io/bikcraft/" target="_blank"><img src="./img/bikcraft_tb.png" alt="projeto x-men" width="276" height="680"></a>
       </li>
     </ul>
   </section>
