--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </main>
   <section id="projetos" class="backplate">
     <h2 class="projetos-titulo">Meu projetos</h2>
-    <ul id="panel" class="container p-flex">
+    <ol id="panel" class="container p-flex">
       <li>
         <a href=""><img src="./img/projeto-gta.png" alt="projeto gta" width="501" height="960"></a>
       </li>
@@ -67,7 +67,7 @@
       <li>
         <a href="https://fernandotarso.github.io/bikcraft/" target="_blank"><img src="./img/bikcraft_tb.png" alt="projeto x-men" width="276" height="680"></a>
       </li>
-    </ul>
+    </ol>
   </section>
   <footer class="backplate">
     <div class="container c-flex">
