html css full, minus text icons

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
   </header>
   <main class="backplate">
-    <div class="container c-flex">
+    <div class="container c-flex rev">
       <div class="info">
         <h1>Olá! Sou Fernando Tarso.</h1>
         <p>Um deselvolvedor front-end em formação, rumo ao full stack.</p>
