one piece proj img fix

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <a href=""><img src="./img/projeto-listagem-pokemon.png" alt="projeto listagem pokemon" width="504" height="953"></a>
       </li>
       <li>
-        <a href=""><img src="/img/projeto-one-piece.png" alt="projeto one piece" width="515" height="957"></a>
+        <a href=""><img src="./img/projeto-one-piece.png" alt="projeto one piece" width="515" height="957"></a>
       </li>
       <li>
         <a href=""><img src="./img/projeto-x-men.png" alt="projeto x-men" width="500" height="956"></a>
