--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </main>
   <section id="projetos" class="backplate">
     <h2 class="projetos-titulo">Meu projetos</h2>
-    <ol id="panel" class="container p-flex">
+    <ol id="panel" class="container p-flex panel">
       <li>
         <a href=""><img src="./img/projeto-gta.png" alt="projeto gta" width="501" height="960"></a>
       </li>
