typo fira sans add

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="description" content="">
   <title>Landing Page DeD</title>
   <link rel="stylesheet" href="./styles/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -47,7 +50,7 @@
     </div>
   </main>
   <section id="projetos" class="backplate">
-    <h2 class="projetos-titulo">Meu projetos</h2>
+    <h2 class="projetos-titulo">Meus projetos</h2>
     <ol id="panel" class="container p-flex panel">
       <li>
         <a href=""><img src="./img/projeto-gta.png" alt="projeto gta" width="501" height="960"></a>
