logo add, tran up, footer fix, main size calc

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header class="backplate">
     <div class="container c-flex">
-      <div>
+      <div class="logo">
         <h1>F&T</h1>
       </div>
       <div>
