--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
         <a href="https://fernandotarso.github.io/bikcraft/" target="_blank"><img src="./img/bikcraft_tb.png" alt="projeto x-men" width="276" height="680"></a>
       </li>
     </ol>
+    <div class="container">
+      <button class="botao">Mais Projetos</button>
+    </div>
   </section>
   <footer class="backplate">
     <div class="container c-flex">
