main fix, responsive add

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </ul>
         </nav>
       </div>
-      <div>
+      <div class="perfil-container">
         <img class="perfil" src="./img/foto-perfil.png" alt="foto perfil" width="460" height="460">
         <figcaption class="caption">Foto meramente ilustrativa</figcaption>
       </div>
