--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>Um deselvolvedor front-end em formação, rumo ao full stack.</p>
         <p>Estou sempre buscando novos projetos para aprender e desenvolver minhas habilidades em web-development, além de feedback da comunidade de programação.</p>
         <p>Interessado em jogos, animação e música. Um pra cada estação, e todos na ultima!</p>
-        <nav aria-label="secundaria">
+        <nav class="socials-container" aria-label="secundaria">
           <ul class="socials">
             <li><a href="https://github.com/FernandoTarso" target="_blank"><img src="./icons/gh_w.svg" alt="github" width="36" height="36"></a></li>
             <li><a href="https://pt-br.facebook.com/" target="_blank"><img src="./icons/fb_w.svg" alt="facebook" width="36" height="36"></a></li>
