--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </li>
     </ol>
     <div class="container">
-      <button class="botao">Mais Projetos</button>
+      <button class="botao-mais">Mais Projetos</button>
     </div>
   </section>
   <footer class="backplate">
@@ -85,6 +85,7 @@
       </details>
     </div>
   </footer>
+  <script src="./js/index.js"></script>
 </body>
 
 </html>
