mais projetos add

--- a/index.html
+++ b/index.html
@@ -74,6 +74,28 @@
     <div class="container">
       <button class="botao-mais">Mais Projetos</button>
     </div>
+    <div class="mais-projetos">
+      <ol id="panel-2" class="container p-flex panel">
+        <li>
+          <a href=""></a>
+        </li>
+        <li>
+          <a href=""></a>
+        </li>
+        <li>
+          <a href=""></a>
+        </li>
+        <li>
+          <a href=""></a>
+        </li>
+        <li>
+          <a href=""></a>
+        </li>
+        <li>
+          <a href=""></a>
+        </li>
+      </ol>
+    </div>
   </section>
   <footer class="backplate">
     <div class="container c-flex">
