js add, projetos tilulo fix

--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
       <li>
         <a href=""><img src="./img/projeto-x-men.png" alt="projeto x-men" width="500" height="956"></a>
       </li>
+    </ol>
+    <div class="container">
+      <button class="botao-mais">Mais Projetos</button>
+    </div>
+    <ol id="panel-2" class="container p-flex panel mais-projetos hide">
       <li>
         <a href="https://fernandotarso.github.io/portfolio_lobo/" target="_blank"><img src="./img/port_lobo_tb.png" alt="projeto x-men" width="350" height="680"></a>
       </li>
@@ -72,29 +77,7 @@
       </li>
     </ol>
     <div class="container">
-      <button class="botao-mais">Mais Projetos</button>
-    </div>
-    <div class="mais-projetos">
-      <ol id="panel-2" class="container p-flex panel">
-        <li>
-          <a href=""></a>
-        </li>
-        <li>
-          <a href=""></a>
-        </li>
-        <li>
-          <a href=""></a>
-        </li>
-        <li>
-          <a href=""></a>
-        </li>
-        <li>
-          <a href=""></a>
-        </li>
-        <li>
-          <a href=""></a>
-        </li>
-      </ol>
+      <button class="botao-esconder hide">Esconder Projetos</button>
     </div>
   </section>
   <footer class="backplate">
