--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
     <h2 class="projetos-titulo">Meus projetos</h2>
     <ol id="panel" class="container p-flex panel">
       <li>
-        <a href=""><img src="./img/projeto-gta.png" alt="projeto gta" width="501" height="960"></a>
+        <a href="https://fernandotarso.github.io/gtaDeD/"><img src="./img/projeto-gta.png" alt="projeto gta" width="501" height="960"></a>
       </li>
       <li>
-        <a href=""><img src="./img/projeto-listagem-pokemon.png" alt="projeto listagem pokemon" width="504" height="953"></a>
+        <a href="https://fernandotarso.github.io/pokemonDeD/"><img src="./img/projeto-listagem-pokemon.png" alt="projeto listagem pokemon" width="504" height="953"></a>
       </li>
       <li>
-        <a href=""><img src="./img/projeto-one-piece.png" alt="projeto one piece" width="515" height="957"></a>
+        <a href="https://fernandotarso.github.io/onepieceDeD/"><img src="./img/projeto-one-piece.png" alt="projeto one piece" width="515" height="957"></a>
       </li>
       <li>
-        <a href=""><img src="./img/projeto-x-men.png" alt="projeto x-men" width="500" height="956"></a>
+        <a href="https://fernandotarso.github.io/xmenDeD/"><img src="./img/projeto-x-men.png" alt="projeto x-men" width="500" height="956"></a>
       </li>
     </ol>
     <div class="container">
