--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
         <p>Interessado em jogos, animação e música. Um pra cada estação, e todos na ultima!</p>
         <nav class="socials-container" aria-label="secundaria">
           <ul class="socials">
-            <li><a href="https://github.com/FernandoTarso" target="_blank"><img src="./icons/gh_w.svg" alt="github" width="36" height="36"></a></li>
-            <li><a href="https://pt-br.facebook.com/" target="_blank"><img src="./icons/fb_w.svg" alt="facebook" width="36" height="36"></a></li>
-            <li><a href="https://www.instagram.com/" target="_blank"><img src="./icons/ig_w.svg" alt="instagram" width="36" height="36"></a></li>
-            <li><a href="https://www.youtube.com/" target="_blank"><img src="./icons/yt_w.svg" alt="youtube" width="36" height="36"></a></li>
+            <li><a href="https://github.com/FernandoTarso" target="_blank"><img src="./icons/gh_w.svg" alt="Github" width="36" height="36"></a></li>
+            <li><a href="www.linkedin.com/in/fernando-tarso-de-oliveira-pabis-14044830b" target="_blank"><img src="./icons/li_w.svg" alt="LinkedIn" width="36" height="36"></a></li>
+            <li><a href="https://pt-br.facebook.com/" target="_blank"><img src="./icons/fb_w.svg" alt="Facebook" width="36" height="36"></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank"><img src="./icons/ig_w.svg" alt="Instagram" width="36" height="36"></a></li>
+            <li><a href="https://www.youtube.com/" target="_blank"><img src="./icons/yt_w.svg" alt="Youtube" width="36" height="36"></a></li>
           </ul>
         </nav>
       </div>
