--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <nav class="socials-container" aria-label="secundaria">
           <ul class="socials">
             <li><a href="https://github.com/FernandoTarso" target="_blank"><img src="./icons/gh_w.svg" alt="Github" width="36" height="36"></a></li>
-            <li><a href="www.linkedin.com/in/fernando-tarso-de-oliveira-pabis-14044830b" target="_blank"><img src="./icons/li_w.svg" alt="LinkedIn" width="36" height="36"></a></li>
+            <li><a href="https://www.linkedin.com/in/fernando-tarso-de-oliveira-pabis-14044830b" target="_blank"><img src="./icons/li_w.svg" alt="LinkedIn" width="36" height="36"></a></li>
             <li><a href="https://pt-br.facebook.com/" target="_blank"><img src="./icons/fb_w.svg" alt="Facebook" width="36" height="36"></a></li>
             <li><a href="https://www.instagram.com/" target="_blank"><img src="./icons/ig_w.svg" alt="Instagram" width="36" height="36"></a></li>
             <li><a href="https://www.youtube.com/" target="_blank"><img src="./icons/yt_w.svg" alt="Youtube" width="36" height="36"></a></li>
@@ -54,16 +54,16 @@
     <h2 class="projetos-titulo">Meus projetos</h2>
     <ol id="panel" class="container p-flex panel">
       <li>
-        <a href="https://fernandotarso.github.io/gtaDeD/"><img src="./img/projeto-gta.png" alt="projeto gta" width="501" height="960"></a>
+        <a href="https://fernandotarso.github.io/gtaDeD/" target="_blank"><img src="./img/projeto-gta.png" alt="projeto gta" width="501" height="960"></a>
       </li>
       <li>
-        <a href="https://fernandotarso.github.io/pokemonDeD/"><img src="./img/projeto-listagem-pokemon.png" alt="projeto listagem pokemon" width="504" height="953"></a>
+        <a href="https://fernandotarso.github.io/pokemonDeD/" target="_blank"><img src="./img/projeto-listagem-pokemon.png" alt="projeto listagem pokemon" width="504" height="953"></a>
       </li>
       <li>
-        <a href="https://fernandotarso.github.io/onepieceDeD/"><img src="./img/projeto-one-piece.png" alt="projeto one piece" width="515" height="957"></a>
+        <a href="https://fernandotarso.github.io/onepieceDeD/" target="_blank"><img src="./img/projeto-one-piece.png" alt="projeto one piece" width="515" height="957"></a>
       </li>
       <li>
-        <a href="https://fernandotarso.github.io/xmenDeD/"><img src="./img/projeto-x-men.png" alt="projeto x-men" width="500" height="956"></a>
+        <a href="https://fernandotarso.github.io/xmenDeD/" target="_blank"><img src="./img/projeto-x-men.png" alt="projeto x-men" width="500" height="956"></a>
       </li>
     </ol>
     <div class="container">
